Small alignment fixes
Padding and margin on header section

--- a/FOR19/static/carbon_app.css
+++ b/FOR19/static/carbon_app.css
@@ -23,8 +23,8 @@ p {
     background: #90a897;
     color: #fff;
     border-radius: 10px;
-    margin: 20px 10px;
-    padding: 15px 20px;
+    margin: 20px 10px 20px 0px;
+    padding: 15px 12px;
     text-align:center;
     align-items: center;
     justify-content: center;
@@ -41,3 +41,4 @@ p {
       flex-direction: column;
     } 
   }
+
